# encaps

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SPEC_Encaps_v1.md  cargo-deny.toml  deny.toml  encaps-security-pubkey.asc
.github/: CODEOWNERS
.github/workflows/: ci.yml
cryq8/: Cargo.toml
cryq8/src/: lib.rs
cryq8/tests/: kp_kat.rs  kp_rt.rs  pwd_rt.rs  pwd_tamper.rs  rt.rs  tamper.rs
cryq8_cli/: Cargo.toml
cryq8_cli/src/: main.rs
cryq8_cli/tests/: qr_e2e.rs
cryq8_ffi/: Cargo.toml  cryq8_ffi.h
cryq8_ffi/src/: lib.rs
release/: SECURITY.md  encaps_v1_macos_cli.tgz
release/ffi_macos/: libcryq8_ffi.dylib
