[package]
name = "cryq8"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10.1"
rand = "0.8"
base64 = "0.22"
zeroize = "1.7"
time = { version = "0.3", features = ["formatting"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
