[package]
name = "cryq8_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cryq8 = { path = "../cryq8" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
base64 = "0.22"
x25519-dalek = "1.1.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
