[package]
name = "cryq8_ffi"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cryq8 = { path = "../cryq8" }
anyhow = "1"
libc = "0.2"
serde_json = "1"
base64 = "0.22"
rand = "0.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
